apt-dater (0.8.x) unstable; urgency=low

  * Fixed a key mismatch in the history view.
  * Fixed a selector positioning bug.
  * Don't use sudo on apt-dater-host status w/ aptitude.
    (Fixes Debian Bug#596723 by "chrysn")
  * Configure should check if popt.h is available.
    (Closes SF Bug#3045502 by Henri Salo)

 -- 

apt-dater (0.8.4) unstable; urgency=low

  * Add UUID host field to report output.
  * Don't fail if apt-dater-host could not get the installed kernel packages;
    fallback to unknown reboot status.
    (Closes SF Bug#2991717 by Karoly Molnar)
  * Use $DPKGTOOL to detect packages with updates.
    (Contributed by Alexandre Anriot)
  * Update german localization.

 -- Andre Ellguth <ellguth@ibh.de>  Mon, 05 Jul 2010 12:51:58 +0200

apt-dater (0.8.3) unstable; urgency=low

  * Parameters on 'apt-dater-host install' must not be interpreted by
    the shell, thanks to Henri Salo.
  * Remove obsolete DefaultUser/DefaultPort lines from conf/apt-dater.conf.example.
    (Closes SF Bug#2946417 by Mathieu PARENT)
  * Handle fwrite return values in keyfiles.c.
  * Add apt-dater-host zypper version (using zypper in rug compatibility mode).
    (Contributed by Chris Liles)
  * Detect screen's socket path during configure.
    (Closes SF Bug#2950721 by Chris Liles)
  * Add .spec files for rpm packaging.
  * Add '-o Aptitude::Delete-Unused=false' to aptitude safe-upgrade calls.
    (Contributed by Patrick Matthäi)

 -- Andre Ellguth <ellguth@ibh.de>  Mon, 29 Mar 2010 08:35:03 +0200

apt-dater (0.8.2) unstable; urgency=low

  * Fix apt-dater not working on PPC
    (Closes Debian Bug#563159 by Gefried Fuchs; thanks to Simon Richter).
  * Fix hotkey l for expanding not working
    (Closes Debian Bug#564450 by Gefried Fuchs)
  * Fix pressing C for file transfer gives error message
    (Closes Debian Bug#564459 by Gefried Fuchs)
    The SFTPCmd config parameter should be set to /usr/bin/sftp -
    the old default value does not work any more.