@@ -1,17 +1,34 @@
+'\" t
 .\"     Title: APT-DATER
-.\"    Author: 
-.\" Generator: DocBook XSL Stylesheets v1.73.2 <http://docbook.sf.net/>
+.\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
+.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: May 23, 2009
-.\"    Manual: 
-.\"    Source: 
+.\"    Manual: [FIXME: manual]
+.\"    Source: [FIXME: source]
+.\"  Language: English
 .\"
-.TH "APT\-DATER" "5" "May 23, 2009" "" ""
+.TH "APT\-DATER" "5" "May 23, 2009" "[FIXME: source]" "[FIXME: manual]"
+.\" -----------------------------------------------------------------
+.\" * Define some portability stuff
+.\" -----------------------------------------------------------------
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.\" http://bugs.debian.org/507673
+.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.ie \n(.g .ds Aq \(aq
+.el       .ds Aq '
+.\" -----------------------------------------------------------------
+.\" * set default formatting
+.\" -----------------------------------------------------------------
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
 .ad l
+.\" -----------------------------------------------------------------
+.\" * MAIN CONTENT STARTS HERE *
+.\" -----------------------------------------------------------------
 .SH "NAME"
-apt-dater.conf \- configuration file of apt-dater(8)
+apt-dater.conf \- configuration file of apt\-dater(8)
 .SH "SYNOPSIS"
 .PP
 .RS 4
@@ -50,11 +67,6 @@ StatsDir=\fI$XDG_DATA_HOME/apt\-dater\fR
 The location of the directory which contains the status files of any host\&. (optional)
 .RE
 .SS "Section [Screen]"
-.PP
-Enabled=\fItrue\fR
-.RS 4
-Enables/disables using of screen(1)\&. (optional)
-.RE
 .PP
 RCFile=\fI$XDG_CONFIG_HOME/apt\-dater/screenrc\fR
 .RS 4
@@ -223,11 +235,14 @@ Hooks to be run before and after an action on a host is done\&. The values shoul
 \fBrun\-parts\fR(8)\&.
 .RE
 .SH "STRING ESCAPES"
-\fBapt\-dater\fR(8) provides an string escape mechanism\&. The escape character is \'%\'\&.
+\fBapt\-dater\fR(8) provides an string escape mechanism\&. The escape character is \*(Aq%\*(Aq\&.
 
-    .PP
+    .sp
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
 .B Table\ \&1.\ \&List of supported escapes.
-.sp -1n
 .TS
 allbox tab(:);
 l l.
@@ -268,7 +283,7 @@ T}:T{
 SSH username
 T}
 .TE
-.sp
+.sp 1
 .SH "FILES"
 .PP
 \fIapt\-dater\&.conf\fR
@@ -283,9 +298,10 @@ Contains all hosts you would like to manage\&.
 .SH "SEE ALSO"
 .PP
 apt\-dater(8), aptitude(1), apt\-get(1), debtrack, screen(1), script(1), ssh(1),
-\fIXDG Base Directory Specification\fR\&[1]\&.
+\m[blue]\fBXDG Base Directory Specification\fR\m[]\&\s-2\u[1]\d\s+2\&.
 .SH "COPYRIGHT"
-Copyright \(co 2008-2009 IBH IT-Service GmbH [\fIhttp://www\&.ibh\&.de/\fR]
+.br
+Copyright \(co 2008-2009 IBH IT-Service GmbH [\m[blue]\fBhttp://www\&.ibh\&.de/\fR\m[]]
 .br
 .SH "NOTES"
 .IP " 1." 4
