@@ -6,6 +6,8 @@ apt-dater (0.8.x) unstable; urgency=low
     (Fixes Debian Bug#596723 by "chrysn")
   * Configure should check if popt.h is available.
     (Closes SF Bug#3045502 by Henri Salo)
+  * Drop "[screen] enabled" config option, it doesn't work any more.
+    (Reported by Daniel Baumann due Debian Bug#597941)
 
  -- 
 
